--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ body {
 
 .fade-enter-active,
 .fade-leave-active {
-    transition: opacity 0.2s ease;
+    transition: opacity 2s ease;
 }
 .fade-enter-from,
 .fade-leave-to {
@@ -37,4 +37,24 @@ body {
 .slide-up-leave-to {
     opacity: 0;
     transform: translateY(100%);
+}
+
+.turn-enter-active,
+.turn-leave-active {
+    transition: all 0.2s ease;
+}
+.turn-enter-from,
+.turn-leave-to {
+    opacity: 0;
+    transform: scaleX(0);
+}
+
+.swipe-enter-active,
+.swipe-leave-active {
+    transition: all 0.2s ease;
+}
+.swipe-enter-from,
+.swipe-leave-to {
+    opacity: 0;
+    transform: translateX(-100%);
 }
