--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import 'material-icons/iconfont/material-icons.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -11,13 +12,18 @@
     }
 }
 
+
+@font-face {
+    font-family: "Nunito";
+    src: local("Nunito"),
+    url(./assets/fonts/Nunito.ttf) format("truetype");
+}
+
 body {
     margin: 0;
     font-family: 'Nunito', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-
-    font-family: 'Nunito', sans-serif;
 }
 
 .fade-enter-active,
